Added and designed product cards using bootstrap cards. The anchor tag is used with a btn-link class stretched to the entire card. Second row must be changed later to show variety

--- a/style.css
+++ b/style.css
@@ -74,3 +74,15 @@
     width: 85px;
 }
 
+.card {
+    --bs-card-border-width: none !important;
+}
+
+.btn-link {
+    text-decoration: none;
+    color:#92140c;
+}
+
+.btn-link:hover {
+    color:#fec601;
+}
