Added login and signup files from previous repository, changed colors to match with the rest in the added login_signup css file.

--- a/style.css
+++ b/style.css
@@ -86,3 +86,13 @@
 .btn-link:hover {
     color:#fec601;
 }
+
+.see-more {
+    background-color: #92140c;
+    border-color: #92140c;
+}
+
+.see-more:hover {
+    background-color: #fec601;
+    border-color: #fec601;
+}
