--- a/style.css
+++ b/style.css
@@ -788,6 +788,349 @@
     cursor: grab;
     }
     
+    /*aboutUs*/
+    .section {
+        padding: 100px 0;
+        position: relative;
+    }
+    .gray-bg {
+        background-color: #f5f5f5;
+    }
+    img {
+        max-width: 100%;
+    }
+    img {
+        vertical-align: middle;
+        border-style: none;
+    }
+    /* About Me 
+    ---------------------*/
+    .about-text h3 {
+      font-size: 45px;
+      font-weight: 700;
+      margin: 0 0 6px;
+    }
+    @media (max-width: 767px) {
+      .about-text h3 {
+        font-size: 35px;
+      }
+    }
+    .about-text h6 {
+      font-weight: 600;
+      margin-bottom: 15px;
+    }
+    @media (max-width: 767px) {
+      .about-text h6 {
+        font-size: 18px;
+      }
+    }
+    .about-text p {
+      font-size: 18px;
+      max-width: 450px;
+    }
+    .about-text p mark {
+      font-weight: 600;
+      color: #92140c;
+    }
+    
+    .about-list {
+      padding-top: 10px;
+    }
+    .about-list .media {
+      padding: 5px 0;
+    }
+    .about-list label {
+      color: #92140c;
+      font-weight: 600;
+      width: 88px;
+      margin: 0;
+      position: relative;
+    }
+    .about-list label:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      right: 11px;
+      width: 1px;
+      height: 12px;
+      background: #92140c;
+      -moz-transform: rotate(15deg);
+      -o-transform: rotate(15deg);
+      -ms-transform: rotate(15deg);
+      -webkit-transform: rotate(15deg);
+      transform: rotate(15deg);
+      margin: auto;
+      opacity: 0.5;
+    }
+    .about-list p {
+      margin: 0;
+      font-size: 15px;
+    }
+    
+    @media (max-width: 900px) {
+      .about-avatar {
+        margin-top: 30px;
+      }
+    }
+    
+    .about-section .counter {
+      padding: 52px 50px;
+      background: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 0 30px rgba(31, 45, 61, 0.125);
+    }
+    .about-section .counter .count-data {
+      margin-top: 10px;
+      margin-bottom: 10px;
+    }
+    .about-section .counter .count {
+      font-weight: 700;
+      color: #92140c;
+      margin: 0 0 5px;
+    }
+    .about-section .counter p {
+      font-weight: 600;
+      margin: 0;
+    }
+    mark {
+        background-image: linear-gradient(rgba(252, 83, 86, 0.6), rgba(252, 83, 86, 0.6));
+        background-size: 100% 3px;
+        background-repeat: no-repeat;
+        background-position: 0 bottom;
+        background-color: transparent;
+        padding: 0;
+        color: currentColor;
+    }
+    .theme-color {
+        color: #fec601;
+    }
+    .dark-color {
+        color: #92140c;
+    }
+    /*OUR TEAM*/
+
+    .single_advisor_profile {
+        position: relative;
+        margin-bottom: 50px;
+        -webkit-transition-duration: 500ms;
+        transition-duration: 500ms;
+        z-index: 1;
+        border-radius: 15px;
+        -webkit-box-shadow: 0 0.25rem 1rem 0 rgba(47, 91, 234, 0.125);
+        box-shadow: 0 0.25rem 1rem 0 rgba(47, 91, 234, 0.125);
+    }
+    .single_advisor_profile .advisor_thumb {
+        position: relative;
+        z-index: 1;
+        border-radius: 15px 15px 0 0;
+        margin: 0 auto;
+        padding: 30px 30px 0 30px;
+        background-color: #92140c;
+        overflow: hidden;
+    }
+    .single_advisor_profile .advisor_thumb::after {
+        -webkit-transition-duration: 500ms;
+        transition-duration: 500ms;
+        position: absolute;
+        width: 150%;
+        height: 80px;
+        bottom: -45px;
+        left: -25%;
+        content: "";
+        background-color: #e6c419;
+        -webkit-transform: rotate(-15deg);
+        transform: rotate(-15deg);
+    }
+    @media only screen and (max-width: 575px) {
+        .single_advisor_profile .advisor_thumb::after {
+            height: 160px;
+            bottom: -90px;
+        }
+    }
+    .single_advisor_profile .advisor_thumb .social-info {
+        position: absolute;
+        z-index: 1;
+        width: 100%;
+        bottom: 0;
+        right: 30px;
+        text-align: right;
+    }
+    .single_advisor_profile .advisor_thumb .social-info a {
+        font-size: 14px;
+        color: #020710;
+        padding: 0 5px;
+    }
+    .single_advisor_profile .advisor_thumb .social-info a:hover,
+    .single_advisor_profile .advisor_thumb .social-info a:focus {
+        color: #ffffff;
+    }
+    .single_advisor_profile .advisor_thumb .social-info a:last-child {
+        padding-right: 0;
+    }
+    .single_advisor_profile .single_advisor_details_info {
+        position: relative;
+        z-index: 1;
+        padding: 30px;
+        text-align: right;
+        -webkit-transition-duration: 500ms;
+        transition-duration: 500ms;
+        border-radius: 0 0 15px 15px;
+        background-color: #e6c419;
+    }
+    .single_advisor_profile .single_advisor_details_info::after {
+        -webkit-transition-duration: 500ms;
+        transition-duration: 500ms;
+        position: absolute;
+        z-index: 1;
+        width: 50px;
+        height: 3px;
+        background-color: #ffffff;
+        content: "";
+        top: 12px;
+        right: 30px;
+    }
+    .single_advisor_profile .single_advisor_details_info h6 {
+        margin-bottom: 0.25rem;
+        -webkit-transition-duration: 500ms;
+        transition-duration: 500ms;
+    }
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+        .single_advisor_profile .single_advisor_details_info h6 {
+            font-size: 14px;
+        }
+    }
+    .single_advisor_profile .single_advisor_details_info p {
+        -webkit-transition-duration: 500ms;
+        transition-duration: 500ms;
+        margin-bottom: 0;
+        font-size: 14px;
+    }
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+        .single_advisor_profile .single_advisor_details_info p {
+            font-size: 12px;
+        }
+    }
+    .single_advisor_profile:hover .advisor_thumb::after,
+    .single_advisor_profile:focus .advisor_thumb::after {
+        background-color: #e6c419;
+    }
+    .single_advisor_profile:hover .advisor_thumb .social-info a,
+    .single_advisor_profile:focus .advisor_thumb .social-info a {
+        color: #ffffff;
+    }
+    .single_advisor_profile:hover .advisor_thumb .social-info a:hover,
+    .single_advisor_profile:hover .advisor_thumb .social-info a:focus,
+    .single_advisor_profile:focus .advisor_thumb .social-info a:hover,
+    .single_advisor_profile:focus .advisor_thumb .social-info a:focus {
+        color: #ffffff;
+    }
+    .single_advisor_profile:hover .single_advisor_details_info,
+    .single_advisor_profile:focus .single_advisor_details_info {
+        background-color: #e6c419;
+    }
+    .single_advisor_profile:hover .single_advisor_details_info::after,
+    .single_advisor_profile:focus .single_advisor_details_info::after {
+        background-color: #ffffff;
+    }
+    .single_advisor_profile:hover .single_advisor_details_info h6,
+    .single_advisor_profile:focus .single_advisor_details_info h6 {
+        color: #ffffff;
+    }
+    .single_advisor_profile:hover .single_advisor_details_info p,
+    .single_advisor_profile:focus .single_advisor_details_info p {
+        color: #ffffff;
+    }
+    /*contact*/
+    .contact-parent{
+        background: #fff;
+        display:flex;
+        margin:80px 0;
+        width: 200%;
+    }
+    .contact-child{
+        display:flex;
+        flex:1;
+        box-shadow:0px 0px 10px -2px rgba(0,0,0,0.75);
+    }
+    .child1{
+        background:linear-gradient(rgba(237, 39, 39, 0.7), rgba(0,0,0,0.7)), url("https://cdn.pixabay.com/photo/2019/06/28/00/17/architecture-4303279_1280.jpg");
+        background-size:cover;
+        display:flex;
+        flex-direction:column;
+        justify-content:space-around;
+        color:#e6c419;
+        padding:100px 0;
+    }
+    .child1 p{
+        padding-left:20%;
+        font-size:20px;
+        text-shadow:0px 0px 2px #c6c319;
+    }
+     
+    .child1 p span{
+        font-size:16px;
+        color:#ffffff;
+    }
+    .child2{
+        flex-direction:column;
+        justify-content:space-around;
+        align-items:center;
+    }
+    .inside-contact{
+        width:90%;
+        margin:0 auto;
+    }
+     
+    .inside-contact h2{
+        text-transform:uppercase;
+        text-align:center;
+        margin-top:50px;
+    }
+     
+    .inside-contact h3{
+        text-align:center;
+        font-size:16px;
+        color:#e1e7eb;
+    }
+    .inside-contact input, .inside-contact textarea{
+        width:100%;
+        background-color:#eee;
+        border:1px solid rgba(0,0,0,0.48);
+        padding:5px 10px;
+        margin-bottom:20px;
+    }
+    .inside-contact input[type=submit]{
+        background-color:#fec601;
+        color:#92140c;
+        transition:0.2s;
+        margin:30px 0;
+    }
+    .inside-contact input[type=submit]:hover{
+        background-color:#92140c;
+        color:#000;
+        transition:0.2s;
+    }
+    @media screen and (max-width:991px){
+        .contact-parent{
+            display:block;
+            width:100%;
+        }
+     
+        .child1{
+            display:none;
+        }
+     
+        .child2{
+            background-image:linear-gradient(rgba(255,255,255,0.7),rgba(255,255,255,0.7)), url("https://cdn.pixabay.com/photo/2019/06/28/00/17/architecture-4303279_1280.jpg");
+            background-size:cover;
+        }
+     
+        .inside-contact input, .inside-contact textarea{
+            background-color:#92140c;
+        }
+    }
+
     
 
     
