CHANGE CONNECT.PHP TO TABLE NAME: Organized files properly and refactored files to PHP. With that, Login and Register pages now have connection to XAMPP database. Register and Login now have references to fields such as email, username, and password.

--- a/css/login_signup.css
+++ b/css/login_signup.css
@@ -23,7 +23,7 @@ header, footer {
 }
 
 .login-bg {
-    background-image: url(./images/login-bg.jpg);
+    background-image: url(../images/login-bg.jpg);
     width: 500px;
     background-size: cover;
     background-position-x: -170px;
