Product Page, Search Page.

--- a/css/style.css
+++ b/css/style.css
@@ -1626,87 +1626,87 @@
     height: 0;
   }
 
-  html,
-  body,
-  div,
-  span,
-  applet,
-  object,
-  iframe,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  blockquote,
-  pre,
-  a,
-  abbr,
-  acronym,
-  address,
-  big,
-  cite,
-  code,
-  del,
-  dfn,
-  em,
-  img,
-  ins,
-  kbd,
-  q,
-  s,
-  samp,
-  small,
-  strike,
-  strong,
-  sub,
-  sup,
-  tt,
-  var,
-  b,
-  u,
-  i,
-  center,
-  dl,
-  dt,
-  dd,
-  ol,
-  ul,
-  li,
-  fieldset,
-  form,
-  label,
-  legend,
-  table,
-  caption,
-  tbody,
-  tfoot,
-  thead,
-  tr,
-  th,
-  td,
-  article,
-  aside,
-  canvas,
-  details,
-  embed,
-  figure,
-  figcaption,
-  footer,
-  header,
-  hgroup,
-  menu,
-  nav,
-  output,
-  ruby,
-  section,
-  summary,
-  time,
-  mark,
-  audio,
-  video {
+  /*html,*/
+  /*body,*/
+  /*div,*/
+  /*span,*/
+  /*applet,*/
+  /*object,*/
+  /*iframe,*/
+  /*h1,*/
+  /*h2,*/
+  /*h3,*/
+  /*h4,*/
+  /*h5,*/
+  /*h6,*/
+  /*p,*/
+  /*blockquote,*/
+  /*pre,*/
+  /*a,*/
+  /*abbr,*/
+  /*acronym,*/
+  /*address,*/
+  /*big,*/
+  /*cite,*/
+  /*code,*/
+  /*del,*/
+  /*dfn,*/
+  /*em,*/
+  /*img,*/
+  /*ins,*/
+  /*kbd,*/
+  /*q,*/
+  /*s,*/
+  /*samp,*/
+  /*small,*/
+  /*strike,*/
+  /*strong,*/
+  /*sub,*/
+  /*sup,*/
+  /*tt,*/
+  /*var,*/
+  /*b,*/
+  /*u,*/
+  /*i,*/
+  /*center,*/
+  /*dl,*/
+  /*dt,*/
+  /*dd,*/
+  /*ol,*/
+  /*ul,*/
+  /*li,*/
+  /*fieldset,*/
+  /*form,*/
+  /*label,*/
+  /*legend,*/
+  /*table,*/
+  /*caption,*/
+  /*tbody,*/
+  /*tfoot,*/
+  /*thead,*/
+  /*tr,*/
+  /*th,*/
+  /*td,*/
+  /*article,*/
+  /*aside,*/
+  /*canvas,*/
+  /*details,*/
+  /*embed,*/
+  /*figure,*/
+  /*figcaption,*/
+  footer
+  /*header,*/
+  /*hgroup,*/
+  /*menu,*/
+  /*nav,*/
+  /*output,*/
+  /*ruby,*/
+  /*section,*/
+  /*summary,*/
+  /*time,*/
+  /*mark,*/
+  /*audio,*/
+  {
     margin: 0;
     padding: 0;
     border: 0;
@@ -2283,7 +2283,7 @@
     cursor: pointer;
     display: block;
     margin-bottom: 3.44828%;
-    position: relative;
+    /*position: relative;*/
   }
   
   .collection-list a .img {
@@ -2614,16 +2614,16 @@
     font-family: "montserratregular", sans-serif;
   }
   
-  .product-detail a {
-    font-size: 100%;
-    line-height: 123.07692%;
-    color: #b5b6bd;
-    text-decoration: underline;
-  }
+  /*.product-detail a {*/
+  /*  font-size: 100%;*/
+  /*  line-height: 123.07692%;*/
+  /*  color: #b5b6bd;*/
+  /*  text-decoration: underline;*/
+  /*}*/
   
-  .product-detail a:hover {
-    color: #086fcf;
-  }
+  /*.product-detail a:hover {*/
+  /*  color: #086fcf;*/
+  /*}*/
   
   .product-detail .price-shipping {
     border-bottom: 1px solid #edeff2;
